fix(opfor): address pre-push council findings
- CRITICAL: null-guard contract.getEnemyColour() in StratConCampaignState
  .backfillChallengerIdentities (legacy StratCon saves with null colour NPE'd
  and aborted contract load).
- HIGH: null-check StratConOpForRoster.deserialize() returns before adding to
  the AtB challenger list (malformed XML node returned null -> later NPE).
- HIGH: maybeSpawnChallenger now requires an existing roster, so pre-acceptance
  updateEnemy calls (e.g. PityContracts contract-market generation) can't spawn
  a spurious challenger.
- Fail-safe ISO date parsing in getArrivedDate/getEndedDate (corrupt save no
  longer throws at panel-render).
- Simplify: stream().toList() in two active-challenger accessors (drop unused
  Collectors import); challengerHeader uses the raw name (also removes the
  MessageFormat-before-escapeHtml ordering nit + the pass-through resource key).
- Tests: assert WITHDRAWN end date; non-garrison + no-roster spawn no-ops;
  legacy roster not absorbed when challengers present; full bot-force-name
  assertions; garrison-with-survivors stays ACTIVE.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>